mailtrain-application/templates/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailtrain
  name: mailtrain
spec:
  ports:
  - name: port-1
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: port-2
    port: 3003
    protocol: TCP
    targetPort: 3003
  - name: port-3
    port: 3004
    protocol: TCP
    targetPort: 3004
  selector:
    app: mailtrain
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
    app.kubernetes.io/managed-by: Helm
  name: mongo
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
